src/test/ui/impl-trait/universal-two-impl-traits.stderr
error[E0308]: mismatched types
  --> $DIR/universal-two-impl-traits.rs:15:9
   |
LL |     a = y; //~ ERROR mismatched
   |         ^ expected `impl Debug` parameter, found a different `impl Debug` parameter
   |
   = note: expected type `impl Debug` (`impl Debug` parameter)
              found type `impl Debug` (`impl Debug` parameter)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
